--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif8266
 board = d1_mini_lite
 framework = arduino
 upload_resetmethod = nodemcu
+monitor_speed = 9600
+monitor_rts = 0
