--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,6 @@ framework = arduino
 upload_resetmethod = nodemcu
 monitor_speed = 9600
 monitor_rts = 0
+lib_deps = 
+    adafruit/Adafruit GFX Library@^1.11.9
+    adafruit/Adafruit SSD1306@^2.5.9
